# mo_ind_p2

./: Cargo.toml  Makefile  README.md  main.py  requirements.txt  rust_time.md  students.db
.devcontainer/: devcontainer.json
datasets/: cereal.csv
py_src/: man_display_stat.py
src/: cli.rs  db.rs  lib.rs  main.rs
