[package]
name = "azure-postgresql-rust-quickstart"
version = "0.1.0"
authors = ["abhishek <abhirockzz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.19"
openssl = "0.10.32"
postgres-openssl = "0.5"
rand = "0.8.0"
clap = "4.4"
rusqlite = "0.29"
csv = "1.1"
glob = "0.3"